links and resume order

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 	<h1 class="bleed" id="bleed">Ben Stolovitz</h1>
 	
 	<p>
-		I'm a sophomore at WashU who does <a href="http://sonify.psych.gatech.edu/" title="the accessibility lab where I work">accessibility research</a> at Georgia Tech, helps design and teach a pilot CSE course at my school, and sings a lot.
+		I'm a sophomore at WashU who does <a href="http://sonify.psych.gatech.edu/" title="the accessibility lab where I work">accessibility research</a> at Georgia Tech, helps design and teach <a href="http://www.cse.wustl.edu/~roger/cse102/">a pilot CSE course</a> at my school, and sings a lot.
 	</p>
 
 	<nav>
