--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 	<h1 class="bleed" id="bleed">Ben Stolovitz</h1>
 	
 	<p>
-		I'm a sophomore at WashU who does <a href="http://sonify.psych.gatech.edu/" title="the accessibility lab where I work">accessibility research</a> at Georgia Tech, helps design and teach <a href="http://www.cse.wustl.edu/~roger/cse102/">a pilot CSE course</a> at my school, and sings a lot.
+		I'm a junior at WashU who did <a href="http://sonify.psych.gatech.edu/" title="the accessibility lab where I work">accessibility research</a> at Georgia Tech, helps design and teach <a href="http://www.cse.wustl.edu/~roger/cse102/">a pilot CSE course</a> at my school, and <a href="http://aristocats.wustl.edu" title="The Aristocats webpage">sings a lot</a>.
 	</p>
 
 	<nav>
