Update job title

--- a/index.htm
+++ b/index.htm
@@ -14,13 +14,17 @@
 	<h1 class="bleed" id="bleed">Ben Stolovitz</h1>
 	
 	<p>
-		I'm a junior at WashU who did <a href="http://sonify.psych.gatech.edu/" title="the accessibility lab where I work">accessibility research</a> at Georgia Tech, helps design and teach <a href="http://www.cse.wustl.edu/~roger/cse102/">a pilot CSE course</a> at my school, and <a href="http://aristocats.wustl.edu" title="The Aristocats webpage">sings a lot</a>.
+		I'm a software engineer at Microsoft working in accessibility. 
+		
+		I did <a href="http://sonify.psych.gatech.edu/">accessibility research</a> at Georgia Tech, 
+		helped design and teach <a href="http://www.cse.wustl.edu/~roger/cse102/">a pilot CSE course</a> at my school,
+		and <a href="http://aristocats.wustl.edu" title="The Aristocats webpage">sang a lot</a>.
 	</p>
 
 	<nav>
 		<ul>
 			<li><a href="https://github.com/citelao/" class="button" title="My GitHub profile (citelao)"><img height="32" src="img/social/octocat.svg" onerror="this.src='img/social/fallback/octocat.png'" alt="The GitHub Octocat"></a></li>
-			<li><a href="https://www.linkedin.com/profile/view?id=332886154" class="button" title="My LinkedIn profile"><img height="32" src="img/social/linkedin.svg" onerror="this.src='img/social/fallback/linkedin.png'" alt="The LinkedIn Logo"></a></li>
+			<li><a href="https://www.linkedin.com/in/benstolovitz/" class="button" title="My LinkedIn profile"><img height="32" src="img/social/linkedin.svg" onerror="this.src='img/social/fallback/linkedin.png'" alt="The LinkedIn Logo"></a></li>
 			<li><a href="static/Ben Stolovitz.pdf" class="button" title="My resume (pdf)"><img height="32" src="img/social/resume.svg" onerror="this.src='img/social/fallback/resume.png'" alt="A resume icon"></a></li>
 			<li><a href="mailto:ben@stolovitz.com" class="button" title="Email me"><img height="32" src="img/social/mail.svg" onerror="this.src='img/social/fallback/mail.png'" alt="A letter icon"></a></li>
 		</ul>
