--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ben Stolovitz</title>
-	<meta name="description" content="Portfolio site for Ben Stolovitz, a budding computer science student.">
+	<meta name="description" content="Portfolio site for Ben Stolovitz, an accessibility software engineer at Microsoft">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700|Open+Sans:800' rel='stylesheet' type='text/css'>
@@ -26,7 +26,6 @@
 			<li><a href="https://github.com/citelao/" class="button" title="My GitHub profile (citelao)"><img height="32" src="img/social/octocat.svg" onerror="this.src='img/social/fallback/octocat.png'" alt="The GitHub Octocat"></a></li>
 			<li><a href="https://www.linkedin.com/in/benstolovitz/" class="button" title="My LinkedIn profile"><img height="32" src="img/social/linkedin.svg" onerror="this.src='img/social/fallback/linkedin.png'" alt="The LinkedIn Logo"></a></li>
 			<li><a href="static/Ben Stolovitz.pdf" class="button" title="My resume (pdf)"><img height="32" src="img/social/resume.svg" onerror="this.src='img/social/fallback/resume.png'" alt="A resume icon"></a></li>
-			<li><a href="mailto:ben@stolovitz.com" class="button" title="Email me"><img height="32" src="img/social/mail.svg" onerror="this.src='img/social/fallback/mail.png'" alt="A letter icon"></a></li>
 		</ul>
 	</nav>
 	</div>
