HTTPS fonts please

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 	<meta name="description" content="Portfolio site for Ben Stolovitz, an accessibility software engineer at Microsoft">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700|Open+Sans:800' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700|Open+Sans:800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
