--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 		I'm a software engineer at Microsoft working in accessibility. 
 		
 		I did <a href="http://sonify.psych.gatech.edu/">accessibility research</a> at Georgia Tech, 
-		helped design and teach <a href="http://www.cse.wustl.edu/~roger/cse102/">a pilot CSE course</a> at my school,
+		helped design and teach <a href="http://classes.cec.wustl.edu/~cse132/">a pilot CSE course</a> at my school,
 		and <a href="http://aristocats.wustl.edu" title="The Aristocats webpage">sang a lot</a>.
 	</p>
 
